# GroupThink

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  dependencies.py  main.py
backend/database/: engine.py
backend/database/migrations/: README.md
backend/models/: __init__.py  attachment.py  document.py  group.py  membership.py  message.py  password_reset.py  plan.py  plan_message.py  thread.py  user.py
backend/routers/: auth.py  documents.py  google_auth.py  groups.py  messages.py  plan_chat.py  plans.py  threads.py  uploads.py  websocket.py
backend/schemas/: auth.py  group.py  message.py  plan.py  thread.py
backend/services/: ai_service.py  auth_service.py  email_service.py  group_service.py  message_service.py  plan_service.py
backend/utils/: exceptions.py  websocket_manager.py
docs/: ai-integration.md  api-reference.md  architecture.md  database-schema.md  deployment.md  frontend-guide.md
frontend/: index.html
frontend/css/: chat.css  components.css  docs.css  layout.css  markdown.css  plan.css  reset.css  variables.css
frontend/js/: api.js  app.js  markdown.js  router.js  state.js  ws.js
frontend/js/views/: auth.js  chat.js  docs.js  groups.js  plan.js  thread-list.js
scripts/: reset_db.py  seed_db.py
tests/: conftest.py  test_auth.py  test_groups.py
