[project]
name = "groupthink"
version = "0.1.0"
description = "AI-powered collaborative planning app for friend groups"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
